wip: remove cmake, use env to resolve ManifestAPI from swift resource path

--- a/macOS/project.yml
+++ b/macOS/project.yml
@@ -25,3 +25,9 @@ targets:
     dependencies:
       - package: xtool
         product: XToolSupport
+      - package: xtool
+        product: XTooProductTypes
+        embed: true
+        copy:
+          destination: resources
+          subpath: lib
